--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>Treinamento GIT</title>
  </head>
  <body>
-   <h1>Treinamento sobre GIT</h1>
+   <h1>Treinamento sobre GIT Design</h1>
  </body>
 </html>
